Add get available options for an attribute endpoint
